// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpGuide HelpGuide.Step should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="section has-padding has-background"
        data-test=""
      >
        <h3
          class="title is-3"
          id=""
        />
        <h6
          class="subtitle is-6"
          id=""
        />
      </section>
      <section
        class="section is-flex has-padding has-background"
        data-test=""
      >
        <div
          class="step-3"
        >
          Step 3
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="section has-padding has-background"
      data-test=""
    >
      <h3
        class="title is-3"
        id=""
      />
      <h6
        class="subtitle is-6"
        id=""
      />
    </section>
    <section
      class="section is-flex has-padding has-background"
      data-test=""
    >
      <div
        class="step-3"
      >
        Step 3
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`HelpGuide renderTimeline should match a snapshot when isMobileScreen FALSE 1`] = `
<VerticalTimeline
  currentIndex={3}
  onSelect={[MockFunction]}
  total={5}
/>
`;

exports[`HelpGuide renderTimeline should match a snapshot when isMobileScreen TRUE 1`] = `
<HorizontalTimeline
  currentIndex={3}
  onSelect={[MockFunction]}
  total={5}
/>
`;

exports[`HelpGuide should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="section is-flex has-padding has-background help-guide"
        data-test=""
      >
        <ul
          class="vertical-timeline"
        >
          <div
            class="circle-active"
            style="transform: translateY(0px);"
          />
          <div
            class="line-active"
            style="height: 60px;"
          />
          <li
            class="active "
          />
          <li
            class=" "
          />
          <li
            class=" "
          />
          <li
            class=" "
          />
        </ul>
        <div
          class="help-guide-content"
        >
          <div>
            <section
              class="section has-padding has-background"
              data-test=""
            >
              <h3
                class="title is-3"
                id=""
              />
              <h6
                class="subtitle is-6"
                id=""
              />
            </section>
            <section
              class="section is-flex has-padding has-background"
              data-test=""
            >
              <div
                class="step-1"
              >
                Step 1
              </div>
            </section>
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="section is-flex has-padding has-background help-guide"
      data-test=""
    >
      <ul
        class="vertical-timeline"
      >
        <div
          class="circle-active"
          style="transform: translateY(0px);"
        />
        <div
          class="line-active"
          style="height: 60px;"
        />
        <li
          class="active "
        />
        <li
          class=" "
        />
        <li
          class=" "
        />
        <li
          class=" "
        />
      </ul>
      <div
        class="help-guide-content"
      >
        <div>
          <section
            class="section has-padding has-background"
            data-test=""
          >
            <h3
              class="title is-3"
              id=""
            />
            <h6
              class="subtitle is-6"
              id=""
            />
          </section>
          <section
            class="section is-flex has-padding has-background"
            data-test=""
          >
            <div
              class="step-1"
            >
              Step 1
            </div>
          </section>
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
